--- a/chat.html
+++ b/chat.html
@@ -231,8 +231,51 @@
     }
 
     function makePendingKey(content) {
-      // you can add more fields if needed, but content-only is usually enough to kill the echo duplicates
       return "k:" + normalizeTextForKey(content);
+    }
+
+    function safeParseUrl(raw) {
+      try {
+        return new URL(raw);
+      } catch {
+        return null;
+      }
+    }
+
+    function extractYouTubeIdFromUrl(rawUrl) {
+      const u = safeParseUrl(rawUrl);
+      if (!u) return null;
+
+      const host = u.hostname.toLowerCase().replace(/^www\./, "");
+      const path = u.pathname;
+
+      // youtube.com/watch?v=VIDEOID
+      if (host === "youtube.com" || host === "m.youtube.com" || host === "music.youtube.com") {
+        if (path === "/watch") {
+          const v = u.searchParams.get("v");
+          return v ? v.trim() : null;
+        }
+
+        // youtube.com/embed/VIDEOID
+        if (path.startsWith("/embed/")) {
+          const id = path.split("/embed/")[1]?.split("/")[0];
+          return id ? id.trim() : null;
+        }
+
+        // youtube.com/shorts/VIDEOID
+        if (path.startsWith("/shorts/")) {
+          const id = path.split("/shorts/")[1]?.split("/")[0];
+          return id ? id.trim() : null;
+        }
+      }
+
+      // youtu.be/VIDEOID
+      if (host === "youtu.be") {
+        const id = path.slice(1).split("/")[0];
+        return id ? id.trim() : null;
+      }
+
+      return null;
     }
 
     function formatContent(text) {
@@ -241,9 +284,13 @@
       const urlPattern = /(https?:\/\/[^\s]+)/g;
 
       return safe.replace(urlPattern, (url) => {
-        const lowerUrl = url.toLowerCase();
+        const urlObj = safeParseUrl(url);
+        const hostLower = urlObj ? urlObj.hostname.toLowerCase() : "";
+        const urlLower = url.toLowerCase();
 
-        if (lowerUrl.includes('tenor.com/view/')) {
+        // Tenor embed (keep existing logic, but don't destroy original URL)
+        if (urlLower.includes('tenor.com/view/')) {
+          const lowerUrl = urlLower;
           const parts = lowerUrl.split('-');
           const gifId = parts[parts.length - 1];
           if (gifId) {
@@ -262,25 +309,23 @@
           }
         }
 
-        if (lowerUrl.match(/\.(jpeg|jpg|gif|png|webp)$/)) {
+        if (urlLower.match(/\.(jpeg|jpg|gif|png|webp)$/)) {
           return `<br><img src="${url}" class="embed-media" loading="lazy" /><br>`;
         }
 
-        if (lowerUrl.match(/\.(mp4|webm)$/)) {
+        if (urlLower.match(/\.(mp4|webm)$/)) {
           return `<br><video controls class="embed-media"><source src="${url}"></video><br>`;
         }
 
-        if (lowerUrl.includes('youtube.com/watch?v=') || lowerUrl.includes('youtu.be/')) {
-          const videoId = lowerUrl.includes('v=')
-            ? lowerUrl.split('v=')[1].split('&')[0]
-            : lowerUrl.split('/').pop();
-
+        // YouTube embeds (CASE-SAFE)
+        const ytId = extractYouTubeIdFromUrl(url);
+        if (ytId) {
           return `
             <br>
             <iframe
               width="100%"
               height="250"
-              src="https://www.youtube.com/embed/${videoId}"
+              src="https://www.youtube.com/embed/${ytId}"
               frameborder="0"
               allowfullscreen
               style="border-radius:8px;">
@@ -350,7 +395,6 @@
     }
 
     function consumeMatchingPendingIfExists(serverContentText) {
-      // If a server message matches a pending message, remove the pending bubble to avoid duplicates.
       const key = makePendingKey(serverContentText);
       const clientId = pendingByKey.get(key);
       if (!clientId) return false;
@@ -374,7 +418,6 @@
         let messages = Array.isArray(data.messages) ? data.messages : (Array.isArray(data) ? data : []);
         if (messages.length === 0) return;
 
-        // render oldest -> newest
         messages.reverse();
 
         const shouldAutoScroll = isUserNearBottom();
@@ -382,13 +425,11 @@
 
         for (const message of messages) {
           const sid = messageServerId(message);
-
           if (renderedServerIds.has(sid)) continue;
 
           const authorName = message.author?.username || message.author || 'Unknown';
           const rawText = message.content || "";
 
-          // If this server message is the echo of something we just sent, delete the optimistic bubble first
           consumeMatchingPendingIfExists(rawText);
 
           let contentHtml = formatContent(rawText);
@@ -412,7 +453,6 @@
           appendedAny = true;
         }
 
-        // keep any remaining pending messages at the bottom without recreating them
         const pendingNodes = Array.from(pendingMessages.values()).filter(Boolean);
         pendingNodes.forEach(node => {
           if (node.parentElement === messagesContainer) messagesContainer.appendChild(node);
@@ -437,7 +477,6 @@
 
       const pendingKey = makePendingKey(memeContent);
 
-      // show optimistic bubble
       const pendingEl = buildMessageElement("You", formatContent(memeContent), { pending: true, clientId, pendingKey });
       messagesContainer.appendChild(pendingEl);
 
@@ -465,10 +504,7 @@
           return;
         }
 
-        // keep it pending until the server echo arrives (then fetchMessages will remove it)
         setSendUiState(false);
-
-        // poll immediately so the echo is consumed fast
         fetchMessages();
       } catch (error) {
         console.error(error);
