--- a/chat.html
+++ b/chat.html
@@ -156,6 +156,30 @@
     .messages-container::-webkit-scrollbar { width: 8px; }
     .messages-container::-webkit-scrollbar-track { background: #222; }
     .messages-container::-webkit-scrollbar-thumb { background: #cc5500; border-radius: 4px; }
+	
+	.icon-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  min-width: 48px;
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
+}
+
+
+.spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
   </style>
 </head>
 
@@ -173,7 +197,17 @@
 
       <div class="input-container">
         <input type="file" id="imageInput" accept="image/*,video/*" style="display:none;" />
-        <button id="uploadBtn" class="button" title="Upload Image">📷</button>
+        <button id="uploadBtn" class="button icon-button" title="Upload Image">
+  <svg viewBox="0 0 24 24" class="icon">
+    <path d="M12 5v10m0-10l-4 4m4-4l4 4M5 19h14" 
+          stroke="currentColor" 
+          stroke-width="2" 
+          stroke-linecap="round" 
+          stroke-linejoin="round" 
+          fill="none"/>
+  </svg>
+</button>
+
 
         <input type="text" id="memeInput" placeholder="Type your message here..." />
         <button id="sendMeme" class="button">Send</button>
@@ -529,7 +563,18 @@
       const file = imageInput.files[0];
       if (!file) return;
 
-      uploadBtn.textContent = '⏳';
+      uploadBtn.innerHTML = `
+  <svg viewBox="0 0 24 24" class="icon spin">
+    <circle cx="12" cy="12" r="10" 
+      stroke="currentColor" 
+      stroke-width="3" 
+      fill="none" 
+      stroke-linecap="round"
+      stroke-dasharray="60"
+      stroke-dashoffset="20"/>
+  </svg>
+`;
+
       uploadBtn.disabled = true;
 
       const formData = new FormData();
@@ -549,7 +594,17 @@
       } catch (e) {
         console.error(e);
       } finally {
-        uploadBtn.textContent = '📷';
+        uploadBtn.innerHTML = `
+  <svg viewBox="0 0 24 24" class="icon">
+    <path d="M12 5v10m0-10l-4 4m4-4l4 4M5 19h14" 
+          stroke="currentColor" 
+          stroke-width="2" 
+          stroke-linecap="round" 
+          stroke-linejoin="round" 
+          fill="none"/>
+  </svg>
+`;
+
         uploadBtn.disabled = false;
         imageInput.value = '';
       }
