--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -4,254 +4,284 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Gallery - Memepedia: Rebirth</title>
-    <meta property="og:site_name" content="Memepedia Rebirth">
-	<meta name="application-name" content="Memepedia Rebirth">
-	<link rel="canonical" href="https://memepedia.pages.dev/gallery/videos" />
-<link rel="icon" href="/icon_smaller.jpg" type="image/png">
-<style>
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #000000;
-  color: #ffffff;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-}
+  <meta property="og:site_name" content="Memepedia Rebirth">
+  <meta name="application-name" content="Memepedia Rebirth">
+  <link rel="canonical" href="https://memepedia.pages.dev/gallery/videos" />
+  <link rel="icon" href="/icon_smaller.jpg" type="image/png">
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #000000;
+      color: #ffffff;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      /* Prevent the fixed footer from covering content */
+      padding-bottom: 70px;
+    }
 
-header {
-  background-color: #cc5500;
-  color: #ffffff;
-  padding: 20px 0;
-}
+    header {
+      background-color: #cc5500;
+      color: #ffffff;
+      padding: 20px 0;
+    }
 
-header img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  margin-bottom: 10px;
-}
+    main {
+      padding: 30px;
+    }
 
-main {
-  padding: 30px;
-}
+    .video-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 0 auto;
+      max-width: 1000px;
+    }
 
-.video-gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; /* Center the items in the gallery */
-  gap: 20px;
-  margin: 0 auto;
-  max-width: 1000px; /* Optional: to limit gallery width */
-}
+    .video-item {
+      background-color: #222222;
+      border-radius: 8px;
+      padding: 15px;
+      width: 100%;
+      max-width: 300px;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+    }
 
-.video-item {
-  background-color: #222222;
-  border-radius: 8px;
-  padding: 15px;
-  width: 100%; /* Full width of the container */
-  max-width: 300px; /* Maximum width per video item */
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: center; /* Center the video inside the container */
-}
+    video {
+      border-radius: 8px;
+      width: 100%;
+      height: 200px;
+      background-color: black;
+    }
 
-video {
-  border-radius: 8px;
-  width: 100%;
-  height: 200px;
-  background-color: black;
-}
+    footer {
+      background-color: #111;
+      color: #aaaaaa;
+      padding: 15px 0;
+      font-size: 14px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+    }
 
-footer {
-  background-color: #111;
-  color: #aaaaaa;
-  padding: 15px 0;
-  font-size: 14px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-}
 
-.button {
-  display: inline-block;
-  background-color: #cc5500;
-  color: white;
-  padding: 15px 25px;
-  text-decoration: none;
-  border-radius: 8px;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
+    .button {
+      display: inline-block;
+      background-color: #cc5500;
+      color: white;
+      padding: 15px 25px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: background-color 0.3s;
+      margin: 6px;
+      border: none;
+      cursor: pointer;
+    }
+    .button:hover {
+      background-color: #b34700;
+    }
+    .pager {
+      margin: 18px 0 10px;
+    }
+    .pager .button[disabled] {
+      opacity: 0.55;
+      cursor: not-allowed;
+    }
+    .page-indicator {
+      display: inline-block;
+      margin: 0 10px;
+      color: #dddddd;
+      font-size: 16px;
+    }
+    .page-jump {
+      margin-top: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: center;
+    }
+    .page-jump .button {
+      padding: 10px 16px;
+      font-size: 14px;
+    }
+    .page-jump .button.active {
+      outline: 2px solid #ffffff;
+    }
 
-.button:hover {
-  background-color: #b34700;
-}
-</style>
+  </style>
 </head>
 <body>
 
 <header>
   <h1>Video Gallery</h1>
- </header>
-
-
+</header>
 
 <main>
-  <div class="video-gallery">
-    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video1.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
+  <div class="pager">
+    <button id="prevBtn" class="button" type="button">Previous</button>
+    <span id="pageInfo" class="page-indicator">Page 1</span>
+    <button id="nextBtn" class="button" type="button">Next</button>
+  </div>
 
-    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video2.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
+  <div class="page-jump" id="pageJump"></div>
 
-    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video3.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
+  <div id="videoGallery" class="video-gallery"></div>
 
-    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video4.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-	    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video5.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-		    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video6.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-			    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video7.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-				    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video8.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-					    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video9.mov" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-						    <div class="video-item">
-      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video10.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-							    <div class="video-item">
-	      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video11.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-							    <div class="video-item">
-		      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video12.mov" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-							    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video13.mov" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-								    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video14.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-									    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video15.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-										    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video16.mov" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-										    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video17.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-										    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video18.mov" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-										    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video19.mp4" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
-	
-										    <div class="video-item">
-			      <video controls>
-        <source src="https://memepedia-download.onrender.com/videos/video20.mov" type="video/mp4">
-        Your browser does not support videos.
-      </video>
-    </div>
+  <div class="pager">
+    <button id="prevBtn2" class="button" type="button">Previous</button>
+    <span id="pageInfo2" class="page-indicator">Page 1</span>
+    <button id="nextBtn2" class="button" type="button">Next</button>
   </div>
 </main>
 
 <a href="../gallery" class="button">Go Back To Gallery</a>
-
-<br>
-<br>
 <a href="https://forms.gle/B7nmKBurJwLeTfFEA" class="button">Sumbit Meme</a>
 <a href="../index" class="button">Go Back Home</a>
-
-
-<br><br><br><br>
 
 <footer>
   Created by St1cky N0te, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
+
+<script>
+  const videos = [
+{src: "https://memepedia-download.onrender.com/videos/video1.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video2.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video3.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video4.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video5.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video6.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video7.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video8.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video9.mov", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video10.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video11.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video12.mov", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video13.mov", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video14.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video15.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video16.mov", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video17.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video18.mov", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video19.mp4", type: "video/mp4"},
+    {src: "https://memepedia-download.onrender.com/videos/video20.mov", type: "video/mp4"}
+  ];
+
+  const perPage = 6; // change this if you want
+
+  const galleryEl = document.getElementById("videoGallery");
+  const prevBtn = document.getElementById("prevBtn");
+  const nextBtn = document.getElementById("nextBtn");
+  const prevBtn2 = document.getElementById("prevBtn2");
+  const nextBtn2 = document.getElementById("nextBtn2");
+  const pageInfo = document.getElementById("pageInfo");
+  const pageInfo2 = document.getElementById("pageInfo2");
+  const pageJump = document.getElementById("pageJump");
+
+  function clamp(n, min, max) {
+    return Math.max(min, Math.min(max, n));
+  }
+
+  function totalPages() {
+    return Math.max(1, Math.ceil(videos.length / perPage));
+  }
+
+  function getPageFromHash() {
+    const h = (location.hash || '').replace('#', '').trim();
+    if (!h) return 1;
+
+    const match = h.match(/page\s*=\s*(\d+)/i);
+    if (match) return parseInt(match[1], 10) || 1;
+
+    const asNum = parseInt(h, 10);
+    return isNaN(asNum) ? 1 : asNum;
+  }
+
+  function setHashForPage(page) {
+    location.hash = 'page=' + page;
+  }
+
+  function renderPageJump(current, pages) {
+    pageJump.innerHTML = '';
+    for (let p = 1; p <= pages; p++) {
+      const btn = document.createElement('button');
+      btn.className = 'button' + (p === current ? ' active' : '');
+      btn.textContent = String(p);
+      btn.addEventListener('click', () => setHashForPage(p));
+      pageJump.appendChild(btn);
+    }
+  }
+
+  function render(page) {
+    const pages = totalPages();
+    const p = clamp(page, 1, pages);
+
+    // Only create <source> elements for the current page, so the browser doesn't try
+    // to fetch metadata for every single video at once.
+    const start = (p - 1) * perPage;
+    const end = Math.min(start + perPage, videos.length);
+    const pageItems = videos.slice(start, end);
+
+    galleryEl.innerHTML = "";
+    for (const item of pageItems) {
+      const wrap = document.createElement("div");
+      wrap.className = "video-item";
+
+      const vid = document.createElement("video");
+      vid.controls = true;
+      vid.preload = "metadata";
+
+      const srcEl = document.createElement("source");
+      srcEl.src = item.src;
+      srcEl.type = item.type;
+
+      vid.appendChild(srcEl);
+      vid.appendChild(document.createTextNode("Your browser does not support videos."));
+      wrap.appendChild(vid);
+      galleryEl.appendChild(wrap);
+    }
+
+    const label = 'Page ' + p + ' of ' + pages;
+    pageInfo.textContent = label;
+    pageInfo2.textContent = label;
+
+    prevBtn.disabled = (p <= 1);
+    prevBtn2.disabled = (p <= 1);
+    nextBtn.disabled = (p >= pages);
+    nextBtn2.disabled = (p >= pages);
+
+    renderPageJump(p, pages);
+  }
+
+  prevBtn.addEventListener('click', () => {
+    const p = getPageFromHash();
+    setHashForPage(p - 1);
+  });
+  nextBtn.addEventListener('click', () => {
+    const p = getPageFromHash();
+    setHashForPage(p + 1);
+  });
+  prevBtn2.addEventListener('click', () => {
+    const p = getPageFromHash();
+    setHashForPage(p - 1);
+  });
+  nextBtn2.addEventListener('click', () => {
+    const p = getPageFromHash();
+    setHashForPage(p + 1);
+  });
+
+  window.addEventListener('hashchange', () => {
+    render(getPageFromHash());
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  });
+
+  render(getPageFromHash());
+</script>
+
 <script data-goatcounter="https://magicdippyegg.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
